# MQStackYWH

./: .env  README.md  compose.yaml
apps/: Dockerfile  pyproject.toml
apps/src/: crawler.py  shared.py  worker.py
apps/src/api/: client.py  models.py
apps/src/mq/: client.py  dto.py
apps/tests/: test_mapper.py
apps/tests/resources/: programs.json
grafana-provisioning/dashboards/: dashboard.json  dashboard.yml
grafana-provisioning/datasources/: automatic.yml
