[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
uplink = "^0.9.7"
pydantic = "^2.7.4"
pika = "^1.3.2"
influxdb-client = "^1.43.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ['py311']
line-length = 82


[tool.pytest.ini_options]
pythonpath = "src"
